--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,7 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
+                  <a href="/home" class="btn btn-link btn-neutral" style="color: #6cc091;">View Patient</a>
                   <a href="#about" class="btn btn-link btn-neutral" style="color: #6cc091;">About Us</a>
                   <a href="#contact" class="btn btn-link btn-neutral" style="color: #6cc091;">Contact</a>
                   <a href="/signup" class="btn btn-link btn-neutral" style="color: #6cc091;">Register</a>
