--- a/views/reg-selection.hbs
+++ b/views/reg-selection.hbs
@@ -41,7 +41,7 @@
                               <h3>Register as a pharmacist allows you to add and view patients infomation</h3>
                           </h3>
                           <br/>
-                          <a href="/new-pharmacist" class="btn btn-warning btn-round">Start now</a>
+                          <a href="/new/pharmacist" class="btn btn-warning btn-round">Start now</a>
                       </div>
                   </div>
               </div>
@@ -59,7 +59,7 @@
                               <h3>Register as a doctor allows you to view patients infomation</h3>
                           </h3>
                           <br/>
-                          <a href="/new-doctor" class="btn btn-primary btn-round">Start now</a>
+                          <a href="/new/doctor" class="btn btn-primary btn-round">Start now</a>
                       </div>
                   </div>
               </div>
