--- a/views/show-patient.hbs
+++ b/views/show-patient.hbs
@@ -1,4 +1,89 @@
 <style media="screen">
+
+  /* Adding medication Form */
+
+  .form-style-8{
+      font-family: 'Open Sans Condensed', arial, sans;
+      width: 500px;
+      padding: 30px;
+      background: #FFFFFF;
+      margin: 50px auto;
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+      -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+      -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+
+  }
+  .form-style-8 h2{
+      background: #4D4D4D;
+      text-transform: uppercase;
+      font-family: 'Open Sans Condensed', sans-serif;
+      color: #6cc091;
+      font-size: 18px;
+      font-weight: 100;
+      padding: 20px;
+      margin: -30px -30px 30px -30px;
+  }
+  .form-style-8 input[type="text"],
+  .form-style-8 input[type="date"],
+  .form-style-8 input[type="datetime"],
+  .form-style-8 input[type="email"],
+  .form-style-8 input[type="number"],
+  .form-style-8 input[type="search"],
+  .form-style-8 input[type="time"],
+  .form-style-8 input[type="url"],
+  .form-style-8 input[type="password"],
+  .form-style-8 input[type="tel"],
+  .form-style-8 textarea,
+  .form-style-8 select
+  {
+      box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      outline: none;
+      display: block;
+      width: 100%;
+      padding: 7px;
+      border: none;
+      border-bottom: 1px solid #ddd;
+      background: transparent;
+      margin-bottom: 10px;
+      font: 16px Arial, Helvetica, sans-serif;
+      height: 45px;
+  }
+  .form-style-8 textarea{
+      resize:none;
+      overflow: hidden;
+  }
+  .form-style-8 input[type="button"],
+  .form-style-8 input[type="submit"]{
+      -moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      -webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      background-color: #2CBBBB;
+      border: 1px solid #27A0A0;
+      display: inline-block;
+      cursor: pointer;
+      color: #FFFFFF;
+      font-family: 'Open Sans Condensed', sans-serif;
+      font-size: 14px;
+      padding: 8px 18px;
+      text-decoration: none;
+      text-transform: uppercase;
+  }
+  .form-style-8 input[type="button"]:hover,
+  .form-style-8 input[type="submit"]:hover {
+      background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+      background-color:#34CACA;
+  }
+
+  /* EVERYTHING ABOVE THIS LINE CAN BE PUT INTO MAIN STYLESHEET */
+
+  .dosage-quan, .verify-medicine {
+      display: flex;
+      flex-direction: row;
+  }
+
+  /* Modal Styles */
   .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -118,12 +203,14 @@
       </div>
       <div class="modal-body">
         <div class="separation-content">
-          <div class="each-medication" style="display: flex; flex-direction: row; align-items: center;">
-            <h3>Name: {{medication}}</h3>
-            <h3>Dosage: {{dosage}} </h3>
-            <h3>Date Prescribed: {{date}}</h3>
-            <h3>Quantity: {{quantity}}</h3>
-            <h3>Prescriber's DEA: {{DEA}}</h3>
+          <div class="each-medication" style="display: flex; flex-direction: column; border-bottom: 1px; solid #222;">
+            {{#each patient.meds}}
+              <h3>Name: {{this.drugName}}</h3>
+              <h3>Dosage: {{this.dosage}} </h3>
+              <h3>Date Prescribed: {{this.createdAt}}</h3>
+              <h3>Quantity: {{this.quantity}}</h3>
+              <h3>Prescriber's DEA: {{this.prescriberDEA}}</h3>
+            {{/each}}
           </div>
         </div>
       </div>
@@ -135,12 +222,37 @@
   </div>
 
   <div class="patient-basic-info">
-    <h2><button style="position: relative; width: 20px; height: 20px; border-radius: 50px; right: 180px; font-weight: bold;" onclick="goBack()" type="button" id="backBtn"><</button>{{firstname}} {{lastname}}</h2>
+    <h2><button style="position: relative; width: 20px; height: 20px; border-radius: 50px; right: 180px; font-weight: bold;" onclick="goBack()" type="button" id="backBtn"><</button>{{patient.firstname}} {{patient.lastname}}</h2>
     <div class="dobAndMedication" style="display: flex; flex-direction: row; align-items: center;">
-      <h3>DOB: {{birthday}}</h3>
+      <h3>DOB: {{patient.dob}}</h3>
       <button type="button" id="medicationBtn">See All Prescription</button>
     </div>
 
+  </div>
+
+  <div class="form-style-8">
+    <h2>Add Medication to {{patient.firstname}} {{patient.lastname}}</h2>
+    <form method="POST" action="/patients/{{patient._id}}/medications">
+      <input required="" type="text" name="drugName" placeholder="What Medication was Prescribed">
+      <div class="dosage-quan">
+          <input required="" type="number" name="dosage" placeholder="Dosage" />
+          <input required="" type="number" name="quantity" placeholder="Quantity" />
+      </div>
+
+      <div class="verify-medicine">
+          <input required="" type="text" name="prescriber" placeholder="Prescriber" />
+          <input required="" type="number" name="prescriberDEA" placeholder="Doctor's DEA" />
+          <input required="" type="number" name="pharmacyID" placeholder="Pharmacy ID" />
+
+      </div>
+
+      <span>
+
+          <button type="submit" style="border-color: #6cc091; color: #6cc091"> Submit </button>
+          <a class="cancelBtn" href="/" role="button" style="color: red;text-decoration: none; padding: 12px; border: 1px solid red; border-radius: 5px;">Cancel</a>
+
+      </span>
+    </form>
   </div>
 
 
@@ -178,4 +290,9 @@
   function goBack() {
     window.history.back();
     }
+
+  function adjust_textarea(h) {
+      h.style.height = "20px";
+      h.style.height = (h.scrollHeight)+"px";
+  }
 </script>
