--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,8 +60,8 @@
                               <div class="container">
                                   <div class="row">
                                       <div class="col-md-8 offset-2 text-center">
-                                          <h1 class="title">Awesome Experiences</h1>
-                                          <h5>Now you have no excuses, it's time to surprise your clients, your competitors, and why not, the world. You probably won't have a better chance to show off all your potential if it's not by designing a website for your own agency or web studio.</h5>
+                                          <h1 class="title">Insight-Driven Records</h1>
+                                          <h5>We provide an insight-driven centralized and user-friendly HIPAA-compliant service for improving accessibility to medical data for clinicians and pharmacists.</h5>
                                           <br />
                                       </div>
                                   </div>
@@ -76,8 +76,8 @@
                               <div class="container">
                                   <div class="row">
                                       <div class="col-md-7 offset-5 text-right">
-                                          <h2 class="title">Premium Offers for Venice</h1>
-                                          <h5>Now you have no excuses, it's time to surprise your clients, your competitors, and why not, the world. You probably won't have a better chance to show off all your potential if it's not by designing a website for your own agency or web studio.</h5>
+                                          <h2 class="title">Connecting Medical Professionals</h1>
+                                          <h5>By augmenting the user experience and accounting for information management, we ultimately aim to secure medical data and records for users across the nation.</h5>
                                           <br />
                                       </div>
                                   </div>
@@ -218,7 +218,7 @@
                           <div class="col-md-5">
                               <div class="card-img-top">
                                   <a href="#">
-                                      <img class="img" src="/img/Jake.jpg" style="height: 222px;"/>
+                                      <img class="img" src="/img/Jake.JPG" style="height: 222px;"/>
                                   </a>
                               </div>
                           </div>
