--- a/views/reg-selection.hbs
+++ b/views/reg-selection.hbs
@@ -30,7 +30,7 @@
               <div class="col-md-6">
                   <div class="card card-plain card-blog text-center">
                       <div class="card-image">
-                          <a href="/new-pharmacist">
+                          <a href="/new/pharmacist">
                               <img class="img img-raised" src="/img/ph.jpeg" />
                           </a>
                       </div>
@@ -48,7 +48,7 @@
               <div class="col-md-6">
                   <div class="card card-plain card-blog text-center">
                       <div class="card-image">
-                          <a href="/new-doctor">
+                          <a href="/new/doctor">
                               <img class="img img-raised" src="/img/doc.jpeg" />
                           </a>
                       </div>
