--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -54,4 +54,8 @@
         <h2>This Account was Create On <span style="color: #f44271;">{{cur_user.createdAt}}<span></h2>
     </div>
 
+    <div class="backBtn">
+        <a href="/portals"><h2 style="text-align: center;">| Back |</h2></a>
+    </div>
+
 </div>
