--- a/views/errorPage/401.hbs
+++ b/views/errorPage/401.hbs
@@ -13,7 +13,12 @@
 
 </style>
 
-<h1 style="text-align: center;">PLEASE LOG IN OR REGISTER TO ADD A PATIENT OR MEDICATION</h1>
+{{#if message}}
+    <h1 style="text-align: center;">{{this.message}}</h1>
+{{else}}
+    <h1 style="text-align: center;">PLEASE LOG IN OR REGISTER TO ADD A PATIENT OR MEDICATION</h1>
+{{/if}}
+
 
 <div class="backBtn">
     <a href="/"><h1 style="border-bottom: 2px solid grey;">Home</h1></a>
