--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <!-- Navbar-->
-  <nav class="navbar navbar-toggleable-md navbar-default navbar-absolute">
+  <nav class="navbar navbar-toggleable-md navbar-default navbar-absolute" style="position: fixed !important;">
       <div class="container">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-bar"></span>
