--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -51,7 +51,7 @@
     </div>
 
     <div class="createDate">
-        <h2>This Account was Create On <span style="color: #f44271;">{{cur_user.createdAt}}<span></h2>
+        <h2>This Account was Create On <span style="color: #f44271;">{{cleanDate}}<span></h2>
     </div>
 
     <div class="backBtn">
